--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-gray-200 max-w-[390px] mx-auto px-[24px] py-[16px] font-medium;
+}
+
+nav {
+  @apply bg-white h-[64px] flex justify-between items-center px-[24px] rounded-full border-2 border-indigo-500 shadow-md;
+}
+
+.modal {
+  @apply absolute left-0 right-0 mx-auto max-w-[336px] rounded-3xl top-[104px] p-[24px] z-10 bg-white shadow-md w-full flex flex-col gap-[18px] text-stone-500;
+}
+
+.input {
+  @apply px-4 py-3 rounded-md border-2 border-gray-200 focus:outline-none focus:border-indigo-500 bg-white placeholder:text-gray-300;
+}
+
+.normalButton {
+  @apply px-4 py-3 bg-zinc-100 rounded-full border border-gray-200 justify-center items-center gap-8 inline-flex;
+}
+
+.title {
+  @apply text-xl text-black font-semibold;
+}
