--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,42 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-200 max-w-[390px] mx-auto px-[24px] py-[16px] font-medium;
+  @apply bg-gray-200 max-w-[390px] mx-auto px-[24px] font-medium text-stone-700 mb-[16px] mt-[104px];
 }
 
-nav {
-  @apply bg-white h-[64px] flex justify-between items-center px-[24px] rounded-full border-2 border-indigo-500 shadow-md;
+.navbar {
+  @apply bg-white max-w-[342px] mx-auto h-[64px] flex justify-between items-center px-[24px] rounded-full border-2 mt-[16px] border-indigo-500 shadow-md fixed top-0 left-0 right-0 z-10;
 }
 
 .modal {
-  @apply absolute left-0 right-0 mx-auto max-w-[336px] rounded-3xl top-[104px] p-[24px] z-10 bg-white shadow-md w-full flex flex-col gap-[18px] text-stone-500;
+  @apply absolute left-0 right-0 mx-auto max-w-[342px] rounded-3xl top-[86px] outline outline-2 outline-gray-300 p-[24px] z-10 bg-white shadow-md w-full flex flex-col gap-[18px] ;
 }
 
 .input {
-  @apply px-4 py-3 rounded-md border-2 border-gray-200 focus:outline-none focus:border-indigo-500 bg-white placeholder:text-gray-300;
+  @apply px-4 py-3 rounded-md border-2 border-gray-200 focus:outline-none focus:border-indigo-500 bg-white placeholder:text-gray-400;
 }
 
 .normalButton {
-  @apply px-4 py-3 bg-zinc-100 rounded-full border border-gray-200 justify-center items-center gap-8 inline-flex;
+  @apply px-4 py-3 bg-zinc-100 rounded-full border-2 border-gray-200 justify-center items-center gap-8 inline-flex;
 }
 
 .title {
   @apply text-xl text-black font-semibold;
 }
+
+.addMoreTagsButton{
+  @apply px-4 py-3 rounded-md border-2 border-gray-300 focus:outline-none bg-gray-100 text-gray-400 flex justify-center w-full border-dashed
+}
+
+.tagButton{
+  @apply w-full flex justify-between  border-gray-200 border-2 text-gray-400 px-4 py-3 rounded-md
+}
+
+.confirmedTagButton{
+  @apply w-full flex justify-between bg-indigo-50 border-indigo-400 border-2 text-indigo-400 px-4 py-3 rounded-md gap-2
+}
+
+.publishButton {
+  @apply mx-auto max-w-[342px] w-full my-6 shadow-md py-3 px-4 bg-indigo-500 rounded-full text-white
+}
+
