Added tags to posts

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,3 +45,14 @@ body {
 .logo{
   @apply text-indigo-500 font-bold text-2xl font-poppins mb-1
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
